# lindar_robot_v1

./: .gitignore  README.md
archive/environment_snapshot/: dev_serial_by_id.txt  dev_ttyUSB_ACM.txt  dmesg_tail.txt  groups.txt  ip_addr.txt  ip_route.txt  lsof_serial.txt  lsusb.txt  ss_lntp.txt  systemctl_zwkj.txt
configs/examples/: robot_plc_crontorl.service_default.json
configs/runtime/: detect_config.json  lidar_config.json  range_density_detect_config.json  robot_plc_crontorl.json
deploy/: install_runtime_assets.sh
deploy/systemd/: disable-refresh.conf  zwkjDetect.service  zwkjLidar.service  zwkjPlc.service
docs/: 00_delivery_handoff.md  01_repository_structure.md  02_detector_modes.md  07_robot_plc_crontorl_design.md  08_modbus_manual_for_plc.md  09_new_computer_deployment_checklist.md  README_snapshot.txt  RELEASE_INFO_snapshot.txt  legacy_README_from_snapshot.md
operator_gui/: README.md  requirements.txt
operator_gui/operator_gui/: __init__.py  app.py  config_reader.py  device_scan.py  export_service.py  log_reader.py  main.py  models.py  pointcloud_decoder.py  ros_worker.py  style.py
operator_gui/operator_gui/pages/: __init__.py  config_page.py  device_scan_page.py  device_status_page.py  export_page.py  logs_page.py  overview_page.py  plc_page.py  pointcloud_page.py  result_page.py
operator_gui/scripts/: install_operator_gui_pr1.sh  install_operator_gui_pr2.sh  install_operator_gui_pr4.sh  install_operator_gui_pr5.sh  install_operator_gui_pr6.sh  package_operator_gui_pr1.sh  package_operator_gui_pr2.sh  package_operator_gui_pr4.sh  package_operator_gui_pr5.sh  package_operator_gui_pr6.sh  start_operator_gui.sh
scripts/: fake_plc_master_flow.sh  package_current_photonix_release_full.sh  select_detector_mode.sh  start_photonix_stack.sh  start_stack.sh  stop_photonix_stack.sh  stop_stack.sh  trigger_plc_test.sh  watch_logs.sh  watch_photonix_logs.sh
service/: install.sh
service/detect_service/: detect_config.json
service/env/: ros2_env.env
service/lidar_service/: lidar_config.json
service/templates/avg_fpfh_features/: template_02.fpfh  template_05.fpfh  template_09.fpfh
src/common_utils/: CMakeLists.txt  package.xml  readme.md
src/common_utils/include/common_utils/: check.hpp  config.hpp  fileExt.hpp  log.h  logging_sink.hpp  sync_helper.hpp  time.hpp
src/common_utils/src/: dummy.cpp  logging_sink.cpp
src/common_utils/test/: logging_sink_test.cpp
src/detect_module/: CMakeLists.txt  package.xml
src/detect_module/include/: robot_detector.h
src/detect_module/src/: main.cpp  range_density_detector_node.cpp  range_plc_bridge_node.cpp  robot_detector.cpp
src/lidar_module/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
src/lidar_module/config/: lidar_config.json
src/lidar_module/include/base/: alternate_scheduler.hpp  type.hpp
src/lidar_module/include/lidar_180/: lidar_r1.hpp
src/lidar_module/include/lidar_80/: lidar_01.hpp
src/lidar_module/include/lidar_creator/: lidar_creator.hpp
src/lidar_module/include/lidar_node/: lidar_node.hpp
src/lidar_module/include/sensor/lidar/: lidar_base.hpp  lidar_scan.hpp
src/lidar_module/include/sensor/lidar/base/: crc_calculator.hpp  data_struct.hpp  port_scan.hpp
src/lidar_module/include/sensor/motor/: motor_base.hpp
src/lidar_module/include/sensor/motor/base/: comm_interface.hpp  data_struct.hpp  modbus_rtu.hpp  modbus_tcp.hpp  plc_device_base.hpp  transparent_transport_wrapper.hpp
src/lidar_module/src/: main.cpp
src/plc_module/: CMakeLists.txt  package.xml
src/plc_module/config/: clearance.json
src/plc_module/include/plc_module/: comm_interface.h  modbus_rtu.h  modbus_rtu_slave.h  modbus_slave_server.h  modbus_tcp.h  modbus_tcp_slave.h  plc_device_base.h  transparent_transport_wrapper.h
src/plc_module/src/: modbus_rtu.cc  modbus_rtu_slave.cc  modbus_tcp.cc  modbus_tcp_slave.cc  plc_device_base.cc  transparent_transport_wrapper.cpp
src/plc_module/test/: polling_plc_config.json  pub_test.md  rw_plc_config.json  娓╂箍搴︿紶鎰熷櫒.json  涓€姘у寲纰充紶鎰熷櫒
src/robot_plc_crontorl/: CMakeLists.txt  README.md  package.xml
src/robot_plc_crontorl/include/robot_plc_crontorl/: register_layout.h  robot_plc_controller.h  robot_plc_node.h  robot_pose_payload.h
src/robot_plc_crontorl/scripts/: test_modpoll.sh
src/robot_plc_crontorl/src/: main.cpp  robot_plc_controller.cc  robot_plc_node.cc  robot_pose_payload.cc
src/robot_plc_crontorl/test/: robot_plc_state_machine_test.cc  robot_pose_json_parser_test.cc
src/template_creater/: CMakeLists.txt  package.xml
src/template_creater/src/: main.cpp
template/: ranges.json
template/avg_fpfh_features/: template_01.fpfh  template_06.fpfh  template_08.fpfh
template_pcd/: template_01.pcd  template_02.pcd  template_03.pcd  template_04.pcd  template_05.pcd  template_06.pcd  template_07.pcd  template_08.pcd  template_09.pcd
templates/cluster_default/avg_fpfh_features/: template_03.fpfh  template_04.fpfh  template_07.fpfh
templates/runtime_current/: ranges.json
templates/runtime_current/avg_fpfh_features/: temp_001.fpfh
