<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="911608720@qq.com">mwt</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>nlohmann_json</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nlohmann_json</exec_depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
