<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_module</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="911608720@qq.com">mwt</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>libpcl-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nlohmann_json</build_depend>
  <build_depend>libboost-dev</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nlohmann_json</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-dev</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libboost-dev</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
